@@ -856,7 +856,7 @@ class ModelLinkGraph : public Output<ModelLinkGraph> {
         ModelLinkGraph flype(const ModelLinkGraphArc& from) const;
 
         /**
-         * Exhaustively generates potentially-minimal knot diagrams that
+         * Exhaustively generates potentially-minimal link diagrams that
          * are modelled by this graph.
          *
          * Here _potentially-minimal_ means there are no "obvious"
@@ -866,29 +866,31 @@ class ModelLinkGraph : public Output<ModelLinkGraph> {
          *
          * By _exhaustive_, we mean:
          *
-         * - Every minimal knot diagram modelled by this graph will be
+         * - Every minimal link diagram modelled by this graph will be
          *   generated by this routine, up to reflection and/or reversal
          *   (as noted below).
          *
-         * - If a knot diagram is non-minimal and modelled by this graph,
+         * - If a link diagram is non-minimal and modelled by this graph,
          *   it _might_ still be generated by this routine.
          *
-         * In other words, this routine will generate all minimal knot diagrams
+         * In other words, this routine will generate all minimal link diagrams
          * modelled by this graph, but there is no promise that all of the
          * diagrams generated are minimal.
          *
-         * Labelled diagrams are only generated once up to reflection and/or
-         * reversal, in that this routine will fix the orientation of the knot
-         * (always following arc 0 away from node 0 of the graph) and the
-         * sign of the crossing at node 0 (always positive).
+         * Labelled diagrams are only generated once up to reflection of the
+         * diagram and/or reversal of each component.  That is, this routine
+         * will fix the orientation of each link component (always following
+         * the smallest numbered available arc away from the smallest index
+         * graph node in each link component), and it will fix the sign of the
+         * crossing at node 0 (always positive).
          *
-         * In each knot diagram that is generated, crossing \a k will always
+         * In each link diagram that is generated, crossing \a k will always
          * correspond to node \a k of this graph.
          *
-         * For each knot diagram that is generated, this routine will call
+         * For each link diagram that is generated, this routine will call
          * \a action (which must be a function or some other callable object).
          *
-         * - The first argument passed to \a action will be the knot diagram
+         * - The first argument passed to \a action will be the link diagram
          *   that was generated (of type Link).  This will be passed as an
          *   rvalue; a typical action could (for example) take it by const
          *   reference and query it, or take it by value and modify it, or take
@@ -899,24 +901,18 @@ class ModelLinkGraph : public Output<ModelLinkGraph> {
          *
          * - \a action must return \c void.
          *
-         * \pre This graph does not model multiple-component links (i.e.,
-         * either it models single-component knots, or it is the empty graph).
-         *
-         * \exception FailedPrecondition This graph models links with
-         * more than one component.
-         *
          * \apinotfinal
          *
          * \python This function is available in Python, and the
          * \a action argument may be a pure Python function.  However, its
          * form is more restricted: the argument \a args is removed, so you
          * simply call it as generateMinimalLinks(action).  Moreover,
-         * \a action must take exactly one argument (the knot diagram).
+         * \a action must take exactly one argument (the link diagram).
          *
          * \param action a function (or other callable object) to call
-         * for each knot diagram that is generated.
+         * for each link diagram that is generated.
          * \param args any additional arguments that should be passed to
-         * \a action, following the initial knot diagram argument.
+         * \a action, following the initial link diagram argument.
          */
         template <typename Action, typename... Args>
         void generateMinimalLinks(Action&& action, Args&&... args) const;
